--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@libsql/client": "^0.15.11",
+    "@libsql/core": "^0.15.11",
+    "@libsql/kysely-libsql": "^0.4.1",
     "@tsparticles/engine": "^3.8.1",
     "@types/sqlite3": "^3.1.11",
     "bcryptjs": "^3.0.2",
