--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
     "swiper": "^11.2.10",
-    "tsparticles": "^3.8.1"
+    "three": "^0.179.1",
+    "tsparticles": "^3.8.1",
+    "vanta": "^0.5.24"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
