--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev -p 5454",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postinstall": "npx playwright install chromium"
+    "lint": "next lint"
   },
   "dependencies": {
     "@firecms/neat": "^0.4.0",
@@ -24,6 +23,8 @@
     "next": "15.3.5",
     "next-auth": "^4.24.11",
     "playwright": "^1.54.1",
+    "playwright-aws-lambda": "^0.11.0",
+    "playwright-core": "^1.56.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
