--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "better-sqlite3": "^12.2.0",
     "cheerio": "^1.1.0",
     "framer-motion": "^12.23.3",
-    "next": "15.3.5",
+    "next": "^15.5.4",
     "next-auth": "^4.24.11",
     "playwright": "^1.54.1",
     "playwright-aws-lambda": "^0.11.0",
