--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@libsql/client": "^0.15.11",
     "@libsql/core": "^0.15.11",
     "@libsql/kysely-libsql": "^0.4.1",
+    "@sparticuz/chromium": "^141.0.0",
     "@tsparticles/engine": "^3.8.1",
     "@types/sqlite3": "^3.1.11",
     "bcryptjs": "^3.0.2",
@@ -23,7 +24,6 @@
     "next": "^15.5.4",
     "next-auth": "^4.24.11",
     "playwright": "^1.54.1",
-    "playwright-aws-lambda": "^0.11.0",
     "playwright-core": "^1.56.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
